Tritao: Image component improved with more adjustments.