@@ -19,17 +19,19 @@ package org.netuno.tritao.com;
 
 import java.io.IOException;
 import java.io.File;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DecimalFormat;
 
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.lang3.RandomStringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.netuno.proteu.Proteu;
 import org.netuno.psamata.ImageTools;
 import org.netuno.psamata.Values;
+import org.netuno.psamata.crypto.RandomString;
 import org.netuno.tritao.config.Config;
 import org.netuno.tritao.hili.Hili;
 import org.netuno.tritao.util.TemplateBuilder;
@@ -40,7 +42,7 @@ import org.netuno.tritao.util.TemplateBuilder;
  */
 public class Image extends ComponentBase {
 
-    private static org.apache.logging.log4j.Logger logger = LogManager.getLogger(Image.class);
+    private static final org.apache.logging.log4j.Logger logger = LogManager.getLogger(Image.class);
 
     private String value = "";
 
@@ -52,6 +54,19 @@ public class Image extends ComponentBase {
         super(proteu, hili, com);
     }
 
+    private void setDesignDataWithEmptyInfoValues() {
+        getDesignData().set("com.file.size", 0);
+        getDesignData().set("com.file.size.kb", 0);
+        getDesignData().set("com.file.size.mb", 0);
+        getDesignData().set("com.file.size.gb", 0);
+        getDesignData().set("com.image.search.width", 0);
+        getDesignData().set("com.image.search.height", 0);
+        getDesignData().set("com.image.form.width", 0);
+        getDesignData().set("com.image.form.height", 0);
+        getDesignData().set("com.image.width", 0);
+        getDesignData().set("com.image.height", 0);
+    }
+
     public Component setDesignData(Values designData) {
         super.setDesignData(designData);
         getDataStructure().add(new ComponentData(designData.getString("name"), ComponentData.Type.Text, 0));
@@ -60,7 +75,7 @@ public class Image extends ComponentBase {
 
     public Component setValues(String prefix, Values values) {
         super.setValues(prefix, values);
-        value = getDataStructure().get(0).getValue();
+        value = getDataStructure().getFirst().getValue();
         String fieldName = getValuesPrefix().concat(getDesignData().getString("name"));
         if (getValues().hasKey(fieldName + ":value")) {
             if (getValues().getString(fieldName + ":null").equals("true")) {
@@ -83,7 +98,7 @@ public class Image extends ComponentBase {
                         Files.deleteIfExists(fileSearch);
                     } catch (Exception e) {
                         logger.trace(e);
-                        logger.error("Image file not deleted " + filePath.toAbsolutePath() + " because: " + e.getMessage());
+                        logger.error("Image file not deleted {} because: {}", filePath.toAbsolutePath(), e.getMessage());
                     }
                 }
                 value = "";
@@ -92,7 +107,7 @@ public class Image extends ComponentBase {
             } else {
                 value = getValues().getString(fieldName + ":value");
             }
-            getDataStructure().get(0).setValue(value);
+            getDataStructure().getFirst().setValue(value);
         }
         return this;
     }
@@ -102,21 +117,17 @@ public class Image extends ComponentBase {
             new Label(getProteu(), getHili(), getDesignData(), getTableData(), getMode()).render();
             getDesignData().set("com.image.value", value == null ? "" : value);
             getDesignData().set("com.image.size", !getDesignData().getString("width").equals("0") ? getDesignData().getString("width") : "size");
-            if (value != null) {
+            if (value != null && !value.isEmpty()) {
                 String fileExt = FilenameUtils.getExtension(value);
                 if (fileExt.equals("jpg") || fileExt.equals("jpeg")
                         || fileExt.equals("png") || fileExt.equals("gif")) {
                     String tableName = getTableData().getString("name");
                     String fieldName = getDesignData().getString("name");
-                    String databasePath = tableName + java.io.File.separator + fieldName + java.io.File.separator + value;
-                    String urlPath = FilenameUtils.getPath(databasePath)
-                            .replace("\\", "%2F")
-                            .replace("/", "%2F");
-                    String file = FilenameUtils.getName(databasePath);
-                    String fileName = FilenameUtils.getBaseName(databasePath);
-                    getDesignData().set("com.image.name", file);
-                    Path filePath = Paths.get(Config.getPathAppStorageDatabase(getProteu()), databasePath);
-                    if (Files.exists(filePath)) {
+                    String databasePath = tableName + File.separator + fieldName + File.separator;
+                    String fileName = FilenameUtils.getBaseName(value);
+                    getDesignData().set("com.image.name", fileName);
+                    Path filePath = Paths.get(Config.getPathAppStorageDatabase(getProteu()), databasePath + value);
+                    if (!Files.isDirectory(filePath) && Files.exists(filePath)) {
                         String path = FilenameUtils.getPath(databasePath);
                         try (org.netuno.psamata.ImageTools imgToolsForm = new org.netuno.psamata.ImageTools(Config.getPathAppStorageDatabase(getProteu()) + "/" + path + fileName + "___form." + fileExt)) {
                             getDesignData().set("com.image.form.width", imgToolsForm.getWidth() / 2);
@@ -134,14 +145,15 @@ public class Image extends ComponentBase {
                         getDesignData().set("com.file.size.mb", decimalFormat.format(size / 1024.0d / 1024.0d));
                         getDesignData().set("com.file.size.gb", decimalFormat.format(size / 1024.0d / 1024.0d / 1024.0d));
                     } else {
-                        getDesignData().set("com.file.size", 0);
-                        getDesignData().set("com.file.size.kb", 0);
-                        getDesignData().set("com.file.size.mb", 0);
-                        getDesignData().set("com.file.size.gb", 0);
+                        setDesignDataWithEmptyInfoValues();
                     }
-                    getDesignData().set("com.image.preview", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + urlPath + fileName + "___form." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.form.width") + "\" height=\"" + getDesignData().getInt("com.image.form.height") + "\"/>");
-                    getDesignData().set("com.image.url", "Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + urlPath + fileName + "." + fileExt);
+                    getDesignData().set("com.image.preview", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + URLEncoder.encode(databasePath + fileName, StandardCharsets.UTF_8) + "___form." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.form.width") + "\" height=\"" + getDesignData().getInt("com.image.form.height") + "\"/>");
+                    getDesignData().set("com.image.url", "Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + URLEncoder.encode(databasePath + value, StandardCharsets.UTF_8));
+                } else {
+                    setDesignDataWithEmptyInfoValues();
                 }
+            } else {
+                setDesignDataWithEmptyInfoValues();
             }
             TemplateBuilder.output(getProteu(), getHili(), "com/render/image", getDesignData());
             new Description(getProteu(), getHili(), getDesignData(), getTableData(), getMode()).render();
@@ -152,30 +164,28 @@ public class Image extends ComponentBase {
     }
 
     public String getTextValue() {
-        if (value != null && value.length() > 0) {
+        if (value != null && !value.isEmpty()) {
             return Config.getUrlAppStorageDatabase(getProteu()) + "/" + value;
         }
         return "";
     }
 
     public String getHtmlValue() {
-        if (value != null && value.length() > 0) {
+        if (value != null && !value.isEmpty()) {
             String fileExt = FilenameUtils.getExtension(value);
             if (fileExt.equals("jpg") || fileExt.equals("jpeg")
                     || fileExt.equals("png") || fileExt.equals("gif")) {
                 try {
                     String tableName = getTableData().getString("name");
                     String fieldName = getDesignData().getString("name");
-                    String databasePath = tableName + java.io.File.separator + fieldName + java.io.File.separator + value;
-                    String path = FilenameUtils.getPath(databasePath);
-                    String urlPath = path.replace("\\", "%2F")
-                            .replace("/", "%2F");
-                    String file = FilenameUtils.getName(databasePath);
-                    String fileName = FilenameUtils.getBaseName(file);
-                    File fileImageSearch = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + File.separator + fileName + "___search." + fileExt);
-                    File fileImageForm = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + File.separator + fileName + "___form." + fileExt);
-                    File fileImage = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + File.separator + fileName + "." + fileExt);
-                    if (fileImageSearch.exists() && fileImageForm.exists() && fileImage.exists()) {
+                    String databasePath = tableName + File.separator + fieldName + File.separator;
+                    String fileName = FilenameUtils.getBaseName(value);
+                    File fileImageSearch = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + databasePath + fileName + "___search." + fileExt);
+                    File fileImageForm = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + databasePath + fileName + "___form." + fileExt);
+                    File fileImage = new File(Config.getPathAppStorageDatabase(getProteu()) + File.separator + databasePath + fileName + "." + fileExt);
+                    if (!fileImageSearch.isDirectory() && fileImageSearch.exists()
+                            && !fileImageForm.isDirectory() && fileImageForm.exists()
+                            && !fileImage.isDirectory() && fileImage.exists()) {
                         DecimalFormat decimalFormat = new DecimalFormat("0.00");
                         long size = Files.size(fileImage.toPath());
                         getDesignData().set("com.file.size", size);
@@ -196,10 +206,12 @@ public class Image extends ComponentBase {
                         }
                         getDesignData().set("com.image.uid", getValues().getString(getValuesPrefix() + "uid"));
                         getDesignData().set("com.image.extension", fileExt);
-                        getDesignData().set("com.image.url", "Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + urlPath + fileName + "." + fileExt);
-                        getDesignData().set("com.image.preview", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + urlPath + fileName + "___search." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.search.width") + "\" height=\"" + getDesignData().getInt("com.image.search.height") + "\"/>");
-                        getDesignData().set("com.image.large", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + urlPath + fileName + "___form." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.form.width") + "\" height=\"" + getDesignData().getInt("com.image.form.height") + "\"/>");
+                        getDesignData().set("com.image.url", "Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + URLEncoder.encode(databasePath + fileName, StandardCharsets.UTF_8) + "." + fileExt);
+                        getDesignData().set("com.image.preview", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + URLEncoder.encode(databasePath + fileName, StandardCharsets.UTF_8) + "___search." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.search.width") + "\" height=\"" + getDesignData().getInt("com.image.search.height") + "\"/>");
+                        getDesignData().set("com.image.large", "<img src=\"Download" + org.netuno.proteu.Config.getExtension() + "?type=storage-database&path=" + URLEncoder.encode(databasePath + fileName, StandardCharsets.UTF_8) + "___form." + fileExt + "\" width=\"" + getDesignData().getInt("com.image.form.width") + "\" height=\"" + getDesignData().getInt("com.image.form.height") + "\"/>");
                         return TemplateBuilder.getOutput(getProteu(), getHili(), "com/showvalue/image", getDesignData());
+                    } else {
+                        setDesignDataWithEmptyInfoValues();
                     }
                 } catch (Exception e) {
                     throw new Error(e);
@@ -251,10 +263,11 @@ public class Image extends ComponentBase {
                 if (file != null && file.available() > 0) {
                     String fileBaseName = FilenameUtils.getBaseName(file.getName());
                     String fileExt = FilenameUtils.getExtension(file.getName()).toLowerCase();
-                    String fileName = "";
-                    String fileFullName = "";
+                    String fileName;
+                    String fileFullName;
+                    RandomString randomString = new RandomString(8);
                     while (true) {
-                        fileName = fileBaseName + "-" + RandomStringUtils.randomAlphanumeric(8) + "." + fileExt;
+                        fileName = fileBaseName + "-" + randomString.next() + "." + fileExt;
                         fileFullName = path + fileName;
                         Path filePath = Paths.get(Config.getPathAppStorageDatabase(getProteu()), fileFullName);
                         Files.createDirectories(filePath.getParent());
@@ -270,23 +283,26 @@ public class Image extends ComponentBase {
                     getValues().set(fieldName, fileName);
                     if (fileExt.equals("png") || fileExt.equals("gif") || fileExt.equals("jpg") || fileExt.equals("jpeg")) {
                         String filePath = Config.getPathAppStorageDatabase(getProteu()) + File.separator;
-                        org.netuno.psamata.ImageTools imgTools = new org.netuno.psamata.ImageTools(filePath + fileFullName);
-                        if (imgTools.getHeight() > 400 || imgTools.getWidth() > 400) {
-                            if (imgTools.getHeight() > imgTools.getWidth()) {
-                                imgTools.resize(0, 400);
-                            } else {
-                                imgTools.resize(400, 0);
+                        try (ImageTools imgTools = new ImageTools(filePath + fileFullName)) {
+                            if (imgTools.getHeight() > 400 || imgTools.getWidth() > 400) {
+                                if (imgTools.getHeight() > imgTools.getWidth()) {
+                                    imgTools.resize(0, 400);
+                                } else {
+                                    imgTools.resize(400, 0);
+                                }
                             }
-                        }
-                        imgTools.save(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + FilenameUtils.getBaseName(fileName) + "___form." + fileExt, fileExt);
-                        if (imgTools.getHeight() > 200 || imgTools.getWidth() > 200) {
-                            if (imgTools.getHeight() > imgTools.getWidth()) {
-                                imgTools.resize(0, 200);
-                            } else {
-                                imgTools.resize(200, 0);
+                            imgTools.save(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + FilenameUtils.getBaseName(fileName) + "___form." + fileExt, fileExt);
+                            if (imgTools.getHeight() > 200 || imgTools.getWidth() > 200) {
+                                if (imgTools.getHeight() > imgTools.getWidth()) {
+                                    imgTools.resize(0, 200);
+                                } else {
+                                    imgTools.resize(200, 0);
+                                }
                             }
+                            imgTools.save(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + FilenameUtils.getBaseName(fileName) + "___search." + fileExt, fileExt);
+                        } catch (Exception e) {
+                            throw new Error(e);
                         }
-                        imgTools.save(Config.getPathAppStorageDatabase(getProteu()) + File.separator + path + FilenameUtils.getBaseName(fileName) + "___search." + fileExt, fileExt);
                     }
                     getValues().set(requestName + ":value", fileName);
                     getValues().set(requestName + ":new", fileName);
